--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "main": "index.js",
   "dependencies": {
+    "chart.js": "^3.8.0",
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
+    "vue-chartjs": "^4.1.1",
     "vue-router": "^3.5.1",
     "vuedraggable": "^2.24.3",
     "vuetify": "^2.6.0"
