--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "main": "index.js",
   "dependencies": {
+    "axios": "^0.27.2",
     "chart.js": "^3.8.0",
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
